--- a/app/produto.html
+++ b/app/produto.html
@@ -2,28 +2,28 @@
   <div layout-gt-sm="row">
     <md-card layout flex="100">
     <md-card-content  layout-gt-sm="column" flex="100">
-      <form name="produtoForm">
+      <form name="produtoForm" method="POST">
 
         <div layout-gt-sm="row" >
 
           <md-input-container class="md-block" flex-gt-sm>
             <label>Produto</label>
-            <input ng-model="produto">
+            <input ng-model="produto.nome">
           </md-input-container>
 
           <md-input-container class="md-block" flex-gt-sm>
             <label>Marca</label>
-            <input ng-model="marca">
+            <input ng-model="produto.marca">
           </md-input-container>
 
 
           <md-input-container class="md-block" flex-gt-sm>
             <label>Valor padrão</label>
-            <input ng-model="valor">
+            <input ng-model="produto.valor">
           </md-input-container>
 
           <md-input-container class="md-block" flex="5">
-              <md-icon md-svg-icon="icon_add" ng-click="teste()"></md-icon>
+              <md-icon md-svg-icon="icon_add" ng-click="cadastraProduto()"></md-icon>
           </md-input-container>    
 
         </div>
@@ -33,55 +33,33 @@
     </md-card>      
   </div>
 
-        <div layout-gt-sm="row">
-          <md-card layout flex="100">
-          <md-card-content  layout-gt-sm="column" flex="100">
+        <div layout-gt-sm="column">
+          <md-card layout flex="100"  ng-repeat="prod in produtos.data">
+          <md-card-content  layout-sm="column" flex="100">
 
                     <div layout-gt-sm="row">
                         <md-input-container class="md-block" flex-gt-sm>
-                          Nescau
+                          {{prod.nome_produto}}
                         </md-input-container>
 
                         <md-input-container class="md-block" flex-gt-sm>
-                          Nestlê
+                          {{prod.nome_marca}}
                         </md-input-container>
 
 
                         <md-input-container class="md-block" flex-gt-sm>
-                          5,00
+                          {{prod.valor_produto}}
                         </md-input-container>
 
                         <md-input-container class="md-block" flex="5">
                             X
                         </md-input-container>                                          
+
                     </div>        
-
-                    <div layout-gt-sm="row">
-                        <md-input-container class="md-block" flex-gt-sm>
-                          <md-divider></md-divider>
-                        </md-input-container> 
-                    </div>    
-
-                    <div layout-gt-sm="row">
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Toddy
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Pepsico
-                        </md-input-container>
-
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          4,00
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex="5">
-                            X
-                        </md-input-container>                                          
-                    </div>   
+    
 
           </md-card-content>
           </md-card>
         </div>  
+
 </md-content>
