--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 
     <script src="myApp.js"></script>
     <script src="src/main_controller.js"></script>
+    <script src="src/login/login_controller.js"></script>    
     <script src="src/home/home_controller.js"></script>
     <script src="src/cliente/cliente_controller.js"></script>
     <script src="src/vendedor/vendedor_controller.js"></script>
