--- a/app/pedido.html
+++ b/app/pedido.html
@@ -10,7 +10,7 @@
 
             <md-input-container class="md-block" flex-gt-sm>
               <label>Pedido Nro:</label>
-              <input type="text"ng-model="pedido.nro_pedido">
+              <input type="text"ng-model="pedido.nro_pedido" disabled>
             </md-input-container>
 
             <md-input-container class="md-block" flex-gt-sm>
@@ -72,7 +72,7 @@
 
             <md-input-container class="md-block" flex-gt-sm>
               <label>Quantidade</label>
-              <input type="number" ng-model="pedidoItem.qtdItem" ng-keyup="atualizaValorProdutoTotal()">
+              <input type="text" ng-model="pedidoItem.qtdItem" ng-keyup="atualizaValorProdutoTotal()">
             </md-input-container>
 
 
@@ -80,11 +80,17 @@
               <label>Valor Unitário Produto</label>
               <input ng-model="pedidoItem.valorUnit">
             </md-input-container>
+ 
+           <md-input-container class="md-block" flex-gt-sm>
+              <label>Desconto? (%)</label>
+              <input ng-model="pedidoItem.valorUnitDesconto" type="text" ng-keyup="aplicaDescontoItem($event.target.value)">
+            </md-input-container>  
 
            <md-input-container class="md-block" flex-gt-sm>
               <label>Valor Total Produto</label>
               <input ng-model="pedidoItem.valorUnitTotal">
             </md-input-container>            
+
 
           <md-input-container class="md-block" flex="5">
               <md-icon md-svg-icon="icon_add" ng-click="cadastrarPedidoItem()"></md-icon>
@@ -138,7 +144,7 @@
                         </md-input-container>      
 
                         <md-input-container class="md-block" flex="5">
-                              <md-button  flex="5" class="md-raised md-warn" ng-click="deletaPedidoItem(pedido_item.pi_id)">X {{pedido_item.pi_id}}</md-button>
+                              <md-button  flex="5" class="md-raised md-warn" ng-click="deletaPedidoItem(pedido_item.pi_id)">X </md-button>
                         <md-chips>
                           <button md-chip-remove>
                             <md-icon md-svg-icon="md-close"></md-icon>
@@ -150,12 +156,17 @@
 
                     <div layout-gt-sm="row">
                         <md-input-container class="md-block" flex-gt-sm>
-                          <md-divider></md-divider>
+                          <md-divider> 
+                          </md-divider>
                         </md-input-container> 
                     </div>    
 
           </md-card-content>
           </md-card>
+
+
+
+
         </div>
 
 
@@ -183,10 +194,9 @@
 
 <!-- fim desabilita / habilita -->        
 
- 
-
 
 
       </form>
   </div>
 </md-content>
+
