--- a/app/pedido.html
+++ b/app/pedido.html
@@ -102,26 +102,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <div layout-gt-sm="row"  ng-repeat="pedido_item in pedido_itens.data">
+        <div layout-gt-sm="row"  ng-repeat="pedido_item in pedido_itens.data track by $index" 
+        ng-init="somaPedido(pedido_item.item_valor_unitario_total)">
           <md-card layout flex="100">
           <md-card-content  layout-gt-sm="column" flex="100">
 
@@ -144,7 +126,8 @@
                         </md-input-container>      
 
                         <md-input-container class="md-block" flex="5">
-                              <md-button  flex="5" class="md-raised md-warn" ng-click="deletaPedidoItem(pedido_item.pi_id)">X </md-button>
+                             <md-button  flex="5" class="md-raised md-warn" ng-click="deletaPedidoItem(pedido_item.pi_id)">X {{totalPedido}}
+                            </md-button>
                         <md-chips>
                           <button md-chip-remove>
                             <md-icon md-svg-icon="md-close"></md-icon>
@@ -167,6 +150,10 @@
 
 
 
+        </div>
+
+        <div>
+         Total Pedido: {{totalPedido}}
         </div>
 
 
