identacao de codigo e insercao de alguns comentarios

--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-<!--    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'> -->
     <link rel="stylesheet" href="../node_modules/angular-material/angular-material.css"/>
     <link rel="stylesheet" href="assets/app.css"/>
 
+
+<!-- dependências -->
     <script src="../node_modules/angular/angular.js"></script>
     <script src="../node_modules/angular-animate/angular-animate.js"></script>
     <script src="../node_modules/angular-aria/angular-aria.js"></script>
@@ -20,7 +21,10 @@
 	  <script type="text/javascript" src="../bower_components/moment/src/moment.min.js"></script>
 
 
+<!-- module -->
     <script src="myApp.js"></script>
+
+<!-- controllers -->    
     <script src="src/main_controller.js"></script>
     <script src="src/login/login_controller.js"></script>    
     <script src="src/home/home_controller.js"></script>
