--- a/app/pedido.html
+++ b/app/pedido.html
@@ -49,6 +49,7 @@
 
 
 <!-- inicio desabilita / habilita -->
+<!-- aqui a ideia é habilitar esta area somente após o cliente criar o cabeçalho do pedido , questão de usabilidade, evitar que o usuario use errado a tela -->
 
   <div>
         <div layout-gt-sm="row">
