--- a/app/relatorio.html
+++ b/app/relatorio.html
@@ -1,149 +1,14 @@
-<md-content>
-  <div layout-gt-sm="row">
-    <md-card layout flex="100">
-    <md-card-content  layout-gt-sm="column" flex="100">
-      <form name="relatorioForm">
+aqui os links para os relatorios
 
-        <div layout-gt-sm="row" >
-
-              
-          <md-input-container class="md-block" flex-gt-sm>
-
-            <md-select ng-model="" placeholder="Cliente">
-              <md-option ng-selected="">
-                teste
-              </md-option>
-              <md-option>
-                teste
-              </md-option>              
-            </md-select>             
-
-          </md-input-container>
+<div>
+  <a href="/app/#!/relatorio_cliente">Relatório de Clientes</a>
+</div>
 
 
+<div>
+  <a href="/app/#!/relatorio_pedido">Relatório de Pedidos</a>
+</div>
 
-          <md-input-container class="md-block" flex-gt-sm>
-            <md-select ng-model="" placeholder="Produto">
-              <md-option ng-selected="">
-                teste
-              </md-option>
-              <md-option>
-                teste
-              </md-option>              
-            </md-select>     
-          </md-input-container>
-
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Vendedor</label>
-            <input ng-model="vendedor">
-          </md-input-container>
-
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Período</label>
-            <input ng-model="nomeFantasia">
-          </md-input-container>
-
-          <md-input-container class="md-block" flex="5">
-              <md-icon md-svg-icon="icon_search" ng-click="filtroRelatorio()"></md-icon>
-          </md-input-container>  
-
-        </div>
-
-      </form>
-
-     </md-card-content>
-    </md-card>      
-  </div>
-
-
-        <div layout-gt-sm="row">
-          <md-card layout flex="100">
-          <md-card-content  layout-gt-sm="column" flex="100">
-
-                    <div layout-gt-sm="row">
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Nro
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Cliente
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Vendedor
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Data Pedido
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Valor
-                        </md-input-container>
-                                         
-                    </div>        
-
-                    <div layout-gt-sm="row">
-                        <md-input-container class="md-block" flex-gt-sm>
-                          <md-divider></md-divider>
-                        </md-input-container> 
-                    </div>    
-
-
-
-                    <div layout-gt-sm="row">
-                        <md-input-container class="md-block" flex-gt-sm>
-                          1245
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Zanata
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Pedro Silva
-                        </md-input-container>
-
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          16/08/2017
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          120,00
-                        </md-input-container>
-
-                    </div>   
-
-                    <div layout-gt-sm="row">
-                        <md-input-container class="md-block" flex-gt-sm>
-                          1590
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Xis do Bigode
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          Pedro Silva
-                        </md-input-container>
-
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          20/04/2017
-                        </md-input-container>
-
-                        <md-input-container class="md-block" flex-gt-sm>
-                          1.450,00
-                        </md-input-container>
-
-                    </div>   
-
-
-
-          </md-card-content>
-          </md-card>
-        </div>  
-
-
-</md-content>
+<div>
+  <a href="/app/#!/relatorio_produto">Relatório de Produtos</a>
+</div>
