--- a/app/produto.html
+++ b/app/produto.html
@@ -17,7 +17,7 @@
 
             <md-select ng-model="produto.marca">
               <md-option ng-repeat="mca in marcas.data" ng-value="mca.id_marca"  >
-                {{mca.nome_marca}} {{mca.id_marca}}
+                {{mca.nome_marca}}
               </md-option>
             </md-select>       
 
@@ -29,9 +29,12 @@
             <input ng-model="produto.valor">
           </md-input-container>
 
-          <md-input-container class="md-block" flex="5">
+          <md-input-container class="md-block" flex="5"  ng-show="mostrarBtnCad">
               <md-icon md-svg-icon="icon_add" ng-click="cadastraProduto()"></md-icon>
           </md-input-container>    
+          <md-input-container class="md-block" flex="5" ng-show="mostrarBtnEdit">
+            <md-button class="md-raised md-primary" ng-click="editaProduto(cliente.dataCadastro)">Editar</md-button>
+          </md-input-container>             
 
         </div>
 
@@ -42,7 +45,7 @@
 
         <div layout-gt-sm="column">
           <md-card layout flex="100"  ng-repeat="prod in produtos.data">
-          <md-card-content  layout-sm="column" flex="100">
+          <md-card-content  layout-sm="column" flex="100" ng-click="listarUm(prod.id_produto)">
 
                     <div layout-gt-sm="row">
                         <md-input-container class="md-block" flex-gt-sm>
@@ -59,7 +62,8 @@
                         </md-input-container>
 
                         <md-input-container class="md-block" flex="5">
-                              <md-button  flex="5" class="md-raised md-warn" ng-click="deletaProduto(prod.id_produto)">X</md-button>
+                              <md-button  flex="5" class="md-raised md-warn" 
+                              ng-click="deletaProduto(prod.id_produto)">X</md-button>
                         <md-chips>
                           <button md-chip-remove>
                             <md-icon md-svg-icon="md-close"></md-icon>
