--- a/app/index.html
+++ b/app/index.html
@@ -66,18 +66,26 @@
   </md-sidenav>
 
   <md-toolbar layout="row" class="md-toolbar-tools">
+    
     <md-button class="menu md-icon-button" hide-gt-sm ng-click="toggleLeft()"
                aria-label="Show User List">
       <md-icon md-svg-icon="menu"></md-icon>
     </md-button>
-    <h1>Painel de Gerenciamento - <b>{{tituloPagina}}</h1>
+
+    
+    <h1>Painel de Gerenciamento - <b>{{tituloPagina}} </h1>
+
+    <md-button class="menu md-icon-button" ng-click="logout()" ng-show="exibeBtSair">
+      <md-icon md-svg-icon="icon_logout"></md-icon>
+    </md-button>    
+
   </md-toolbar>
 
 
   <div layout="row" flex="100">
 
 
-    <md-sidenav flex="20" class="md-whiteframe-4dp" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left">
+    <md-sidenav flex="20" class="md-whiteframe-4dp" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left" ng-show="logado">
           <md-list>
             <md-list-item ng-repeat="linha in menu">
               <md-button ng-href="{{linha.link}}">
