--- a/app/vendedor.html
+++ b/app/vendedor.html
@@ -63,7 +63,25 @@
             <label>UF</label>
             <input ng-model="vendedor.uf">
           </md-input-container>
-        </div>       
+        </div>    
+
+        <div layout-gt-sm="row">
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>Login</label>
+            <input ng-model="vendedor.login"> 
+          </md-input-container>
+
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>Senha</label>
+            <input type="password" ng-model="vendedor.senha">
+          </md-input-container>
+
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>user ou adm</label>
+            <input type="text" ng-model="vendedor.tipo">
+          </md-input-container>
+
+        </div>              
 
         <div layout-gt-sm="row">
           <md-input-container class="md-block" flex-gt-sm>
