correcao valor pedido, retirado ng init do conteudo do email

--- a/app/pedido.html
+++ b/app/pedido.html
@@ -40,8 +40,7 @@
 
 
         <div>
-              <div layout-gt-sm="row"  ng-repeat="pedido_item in pedido_itens.data track by $index" 
-              ng-init="somaPedido(pedido_item.item_valor_unitario_total)">
+              <div layout-gt-sm="row"  ng-repeat="pedido_item in pedido_itens.data track by $index">
 
                           <div layout-gt-sm="row">
                               <md-input-container class="md-block" flex-gt-sm>
