--- a/app/home.html
+++ b/app/home.html
@@ -2,8 +2,8 @@
 
 
 <md-content layout-padding>
-    <div>
-  DASHBOARD
+    <div align="center">
+  <img src="assets/greff.png">
     </div>
   </md-content>
 
