--- a/app/relatorio.html
+++ b/app/relatorio.html
@@ -1,14 +1,12 @@
-aqui os links para os relatorios
-
-<div>
-  <a href="/app/#!/relatorio_cliente">Relatório de Clientes</a>
-</div>
 
 
-<div>
-  <a href="/app/#!/relatorio_pedido">Relatório de Pedidos</a>
-</div>
+<div align="center">
 
-<div>
-  <a href="/app/#!/relatorio_produto">Relatório de Produtos</a>
+
+		<md-button class="md-raised md-primary" ng-click="relatorio_cliente()">Clientes</md-button>
+
+		<md-button class="md-raised md-primary"  ng-click="relatorio_pedido()">Pedidos</md-button>
+
+		<md-button class="md-raised md-primary"  ng-click="relatorio_produto()">Produtos</md-button>
+
 </div>
