--- a/app/relatorio_cliente.html
+++ b/app/relatorio_cliente.html
@@ -20,8 +20,8 @@
             </md-select>       
           </md-input-container>
 
-          <md-input-container class="md-block" flex="5">
-              <md-icon md-svg-icon="icon_add" ng-click="cadastraProduto()"></md-icon>
+          <md-input-container class="md-block" flex="10">
+            <md-button class="md-raised md-primary"  ng-click="voltar()">Voltar</md-button>
           </md-input-container>    
 
         </div>
