--- a/app/relatorio_pedido.html
+++ b/app/relatorio_pedido.html
@@ -41,7 +41,11 @@
          <md-input-container class="md-block" flex-gt-sm>
             <label>Entrega</label>
             <input ng-model="filtro_dataprevisaoentrega">            
-          </md-input-container>          
+          </md-input-container> 
+
+          <md-input-container class="md-block" flex="10">
+            <md-button class="md-raised md-primary"  ng-click="voltar()">Voltar</md-button>
+          </md-input-container>  
 
         </div>
 
