--- a/app/cliente.html
+++ b/app/cliente.html
@@ -11,7 +11,7 @@
         <div layout-gt-sm="row" >
 
             <md-input-container class="md-block" flex-gt-sm>
-              <label>Nome Fantasia {{logado}}</label>
+              <label>Nome Fantasia</label>
               <input ng-model="cliente.nomeFantasia">
             </md-input-container>
 
