relatorio de venda de produtos

--- a/app/relatorio.html
+++ b/app/relatorio.html
@@ -9,4 +9,6 @@
 
 		<md-button class="md-raised md-primary"  ng-click="relatorio_produto()">Produtos</md-button>
 
+		<md-button class="md-raised md-primary"  ng-click="relatorio_vendas()">Vendas</md-button>		
+
 </div>
