refinamento - ao excluir item de produto, subtrair valor do total

--- a/app/pedido.html
+++ b/app/pedido.html
@@ -230,7 +230,7 @@
                             </md-input-container>      
 
                             <md-input-container class="md-block" flex="5">
-                                 <md-button  flex="5" class="md-raised md-warn" ng-click="deletaPedidoItem(pedido_item.pi_id)">X 
+                                 <md-button  flex="5" class="md-raised md-warn" ng-click="deletaPedidoItem(pedido_item.pi_id, pedido_item.item_valor_unitario_total)">X 
                                 </md-button>
                             <md-chips>
                               <button md-chip-remove>
