--- a/app/relatorio_vendas.html
+++ b/app/relatorio_vendas.html
@@ -25,12 +25,12 @@
 
          <md-input-container class="md-block" flex-gt-sm>
             <label>Vendido em</label>
-            <input type="text" ng-model="periodo_inicio" placeholder="aaaa-mm-dd">            
+            <input type="date" ng-model="periodo_inicio">            
           </md-input-container>
 
          <md-input-container class="md-block" flex-gt-sm>
             <label>Até</label>
-            <input type="text" ng-model="periodo_fim" placeholder="aaaa-mm-dd">
+            <input type="date" ng-model="periodo_fim">
           </md-input-container> 
 
           <md-input-container class="md-block" flex="5">
